<small> fix color contrast

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -41,7 +41,7 @@ main {
                 gap: .25rem;
         
                 small {
-                    color: $pale-blue;
+                    color: #E0E0E0;
                     font-weight: 500;
                 }
         
